text embed改成保存未norm的结果

--- a/tools/base/2_build_dataset.ipynb
+++ b/tools/base/2_build_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -380,11 +380,11 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=0.79s)\n",
+      "Done (t=0.68s)\n",
       "creating index...\n",
       "index created!\n",
       "loading annotations into memory...\n",
-      "Done (t=0.19s)\n",
+      "Done (t=0.16s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,21 +415,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'area': 58473, 'bbox': [208, 33, 219, 267], 'category_id': 1, 'id': 1, 'image_id': 1},\n",
-      " {'area': 157491, 'bbox': [59, 98, 513, 307], 'category_id': 4, 'id': 2, 'image_id': 1},\n",
-      " {'area': 75825, 'bbox': [213, 20, 225, 337], 'category_id': 1, 'id': 3, 'image_id': 1},\n",
-      " {'area': 142186, 'bbox': [77, 115, 506, 281], 'category_id': 4, 'id': 4, 'image_id': 1},\n",
-      " {'area': 60333, 'bbox': [206, 33, 221, 273], 'category_id': 1, 'id': 5, 'image_id': 1},\n",
-      " {'area': 153510, 'bbox': [61, 100, 510, 301], 'category_id': 4, 'id': 6, 'image_id': 1},\n",
-      " {'area': 68385, 'bbox': [209, 26, 235, 291], 'category_id': 1, 'id': 7, 'image_id': 1},\n",
-      " {'area': 153920, 'bbox': [59, 99, 520, 296], 'category_id': 4, 'id': 8, 'image_id': 1}]\n"
+      "[{'area': 58473, 'bbox': [208, 33, 219, 267], 'category_id': 1, 'id': 1, 'image_id': 1, 'iscrowd': False},\n",
+      " {'area': 157491, 'bbox': [59, 98, 513, 307], 'category_id': 4, 'id': 2, 'image_id': 1, 'iscrowd': False},\n",
+      " {'area': 75825, 'bbox': [213, 20, 225, 337], 'category_id': 1, 'id': 3, 'image_id': 1, 'iscrowd': False},\n",
+      " {'area': 142186, 'bbox': [77, 115, 506, 281], 'category_id': 4, 'id': 4, 'image_id': 1, 'iscrowd': False},\n",
+      " {'area': 60333, 'bbox': [206, 33, 221, 273], 'category_id': 1, 'id': 5, 'image_id': 1, 'iscrowd': False},\n",
+      " {'area': 153510, 'bbox': [61, 100, 510, 301], 'category_id': 4, 'id': 6, 'image_id': 1, 'iscrowd': False},\n",
+      " {'area': 68385, 'bbox': [209, 26, 235, 291], 'category_id': 1, 'id': 7, 'image_id': 1, 'iscrowd': False},\n",
+      " {'area': 153920, 'bbox': [59, 99, 520, 296], 'category_id': 4, 'id': 8, 'image_id': 1, 'iscrowd': False}]\n"
      ]
     }
    ],
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -448,8 +448,9 @@
        "{'id': 1, 'subject_id': 1, 'object_id': 2, 'category_id': 73, 'image_id': 1}"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
