--- a/tools/base/3_update_label_info.ipynb
+++ b/tools/base/3_update_label_info.ipynb
@@ -22,19 +22,19 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=0.62s)\n",
+      "Done (t=0.66s)\n",
       "creating index...\n",
       "index created!\n",
       "loading annotations into memory...\n",
-      "Done (t=0.28s)\n",
+      "Done (t=0.29s)\n",
       "creating index...\n",
       "index created!\n",
       "loading annotations into memory...\n",
-      "Done (t=0.24s)\n",
+      "Done (t=0.27s)\n",
       "creating index...\n",
       "index created!\n",
       "loading annotations into memory...\n",
-      "Done (t=0.05s)\n",
+      "Done (t=0.04s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -49,11 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_info = load('label_info.json')\n",
+    "label_info = load('../../configs/label_info.json')\n",
+    "# label_info = load('label_info.json')\n",
     "pair2hoi = label_info['pair2hoi']\n",
     "hoi_info = label_info['hoi_info']\n",
     "ins_info = label_info['ins_info']\n",
@@ -69,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "rare_threshold = 10\n",
     "num_hoi, num_rel, num_ins = len(hoi_info), len(rel_info), len(ins_info)\n",
     "def collect_counts(coco_ins: COCO, coco_rel: COCO, subset: str):\n",
-    "    counts_hoi = defaultdict(lambda: 0)\n",
-    "    counts_ins = defaultdict(lambda: 0)\n",
-    "    counts_rel = defaultdict(lambda: 0)\n",
+    "    counts_hoi = defaultdict(int)\n",
+    "    counts_ins = defaultdict(int)\n",
+    "    counts_rel = defaultdict(int)\n",
     "\n",
     "    for ann in coco_ins.anns.values():\n",
     "        counts_ins[ann['category_id']] += 1\n",
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
