--- a/tools/text_embed/text_embed.ipynb
+++ b/tools/text_embed/text_embed.ipynb
@@ -22,12 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "label_info = load('../../configs/label_info.json')\n",
     "hoi_info = label_info['hoi_info']\n",
+    "rel_info = label_info['rel_info']\n",
     "ins_info = label_info['ins_info']"
    ]
   },
@@ -50,19 +51,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_text_embed(text, clip_model):\n",
-    "    with torch.no_grad():\n",
-    "        # text_embed = clip_model.encode_text(text.to('cuda')).float()\n",
-    "        text_embed = clip_model.encode_text(text).float()\n",
-    "    return text_embed / text_embed.norm(dim=-1, keepdim=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# clip_model, _ = clip.load(name='ViT-B/32', download_root='/data1/wuhao/weights/CLIP', device='cpu')\n",
     "# clip_model, _ = clip.load(name='/data1/wuhao/weights/CLIP/RN50.pt', device='cpu')\n",
     "clip_model, _ = clip.load(name='/data1/wuhao/weights/CLIP/ViT-B-32.pt', device='cpu')\n",
@@ -71,17 +59,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hoi_text_embed = gen_text_embed(hoi_text_inputs, clip_model).cpu()\n",
-    "ins_text_embed = gen_text_embed(ins_text_inputs, clip_model).cpu()"
+    "def gen_text_embed(text):\n",
+    "    device = clip_model.logit_scale.device\n",
+    "    with torch.no_grad():\n",
+    "        # text_embed = clip_model.encode_text(text.to(device)).float()\n",
+    "        text_embed = clip_model.encode_text(text.to(device)).float()\n",
+    "    return text_embed.cpu()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hoi_text_embed = gen_text_embed(hoi_text_inputs)\n",
+    "ins_text_embed = gen_text_embed(ins_text_inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,10 +97,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hoi_text_embed = load('../../text_embed/hoi_text_embed_CLIP-512_ViT-B-32.pkl')\n",
+    "ins_text_embed = load('../../text_embed/ins_text_embed_CLIP-512_ViT-B-32.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hoi_text_embed_mat = torch.zeros(len(ins_info), len(rel_info), hoi_text_embed.shape[-1])\n",
+    "for info in hoi_info.values():\n",
+    "    hoi_text_embed_mat[info['valid_obj_id'], info['valid_rel_id']] = hoi_text_embed[info['valid_id']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dump(hoi_text_embed_mat, 'hoi_text_embed_mat_CLIP-512_ViT-B-32.pkl')"
+   ]
   }
  ],
  "metadata": {
